# mematrica

./: Cargo.toml  LICENSE  README.md
src/: cmatrix.rs  cmatrix_op.rs  cmatrix_trait.rs  lib.rs  macro_def.rs  matrix.rs  matrix2.rs  matrix23_trait.rs  matrix2_op.rs  matrix3.rs  matrix3_op.rs
src/examples/: convert.rs  files.rs  macro_use.rs  matrix_declaration.rs  operations.rs
