[package]
name = "mematrica"
version = "0.1.2"
license = "MIT"
author = "Daniil Volkov"
description = "An easy to use library for working with matrices"
homepage = "https://github.com/DaniilUbica/mematrica"
repository = "https://github.com/DaniilUbica/mematrica"
documentation = "https://docs.rs/mematrica"
readme = "README.md"
categories = ["science"]
keywords = ["linear-algebra"]

[dependencies]
num = "0.4.0"